Going to try adding display properties to sayMore and sayMoreVisible

--- a/style.css
+++ b/style.css
@@ -309,12 +309,14 @@ body {
 }
 
 .sayMore {
+  display: none;
   visibility: hidden;
   position: absolute;
   animation: opacityReverse 2s linear reverse;
 }
 
 .sayMoreVisible {
+  display:inherit;
   visibility: visible;
   width: 95%;
   animation: opacity 2s linear reverse;
