--- a/style.css
+++ b/style.css
@@ -154,8 +154,6 @@
   color: #F8EFEA
 }
 
-
-
 ul {
   list-style-type: none;
   padding-inline-start: 0;
@@ -234,7 +232,7 @@ button:disabled {
 .nextButtonAlign {
   display: flex;
   justify-content: center;
-  margin: 20px;
+  margin: 5px;
 }
 
 .backButtonBox {
@@ -289,14 +287,6 @@ body {
   text-wrap: wrap;
 }
 
-.cardImage {
-  overflow: hidden;
-  padding: 0px;
-  /* max-height:fit-content */
-  max-height: 100%;
-  height: 100%;
-}
-
 .backToHome {
   border:#192F01;
 }
@@ -304,8 +294,6 @@ body {
 .socialLinks {
   border: 1px solid #192F01;
 }
-
-
 
 .row {
   display: flex;
@@ -326,15 +314,21 @@ body {
   /* height: fit-content; */
 }
 
+.cardImageBox {
+  max-height:200px;
+}
+
 .column {
   width: 40%;
-  padding: 15px;
+  /* padding: 15px; */
   display: flex;
   flex: 1 0 42%;
   flex-direction: column;
   justify-content: center;
   column-gap: 10px;
-  margin: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  /* margin: 10px; */
 }
 
 .sayMore {
@@ -665,6 +659,10 @@ input:checked + .slider:before {
 
 .imggg {
   width: 100%;
+  max-width:318.07px;
+  overflow:hidden;
+  border-radius: 20px;
+  padding-top: 5px;
 }
 
 .instructionExits {
@@ -817,8 +815,20 @@ input:checked + .slider:before {
   }
 }
 
+.cardImage {
+  /* padding: 5px; */
+  /* max-height:fit-content */
+  height: 100%;
+  max-height: 200px;
+  overflow:hidden;
+}
+
 @media screen and (max-width: 600px) {
   .column {
+    width: 100%;
+  }
+
+  .imggg {
     width: 100%;
   }
 
