--- a/style.css
+++ b/style.css
@@ -169,18 +169,20 @@ ul {
   border-radius: 30px;
   border-style:double;
   border-color:#DED369;
+  color:#E0475B;
   border-width: 5px;
+  background-color: #192F01;
 }
 
 .bigSearchButton:hover {
   font-size: 20px;
-  color:#E0475B;
+  color:#192F01;
   padding: 10px;
   border-radius: 30px;
   border-style:double;
   border-color:#DED369;
   border-width: 5px;
-  background-color: #192F01;
+  background-color: #E0475B;
 }
 
 .enterText {
@@ -195,7 +197,7 @@ ul {
 }
 
 .searchTermParent {
-  padding-bottom: 5px;
+  padding-bottom: 8px;
 }
 
 button {
@@ -242,7 +244,7 @@ button:disabled {
 
 .backButton {
   text-align: left;
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 body {
@@ -349,7 +351,7 @@ body {
   background-color: #DED369;
   border-radius:20px;
   float: left;
-  margin:2px;
+  margin:15px;
   overflow: hidden;
   text-wrap: wrap;
   width: 49%;
@@ -366,11 +368,12 @@ body {
   display: flex;
   flex-direction: column;
   width: 49%;
-  margin:2px;
+  margin:15px;
   row-gap: 20px;
   overflow-y: none;
   text-wrap:wrap;
   scroll-snap-align: center;
+  padding: 5px;
 }
 
 .rowPreview {
@@ -412,7 +415,7 @@ body {
 .alignPageInfo {
   display: flex;
   justify-content:space-evenly;
-  margin-top:5px;
+  margin-top:8px;
 }
 
 .recipeSelectionScreenVisible {
@@ -667,7 +670,7 @@ input:checked + .slider:before {
 
 .instructionExits {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   padding-left: 15 px;
   align-items: flex-start;
   margin-left: 15px;
